# gw2_tools

./: .gitignore  main.py  pyproject.toml
.github/workflows/: keepalive.yml
app/: app_service.py  main.py  state.py  supabase_manager.py
app/auth/: __init__.py  auth_instance.py  auth_manager.py  auth_screen.py  supabase_client.py
app/components/: __init__.py  admin_dialog.py  sidebar.py
app/managers/: __init__.py  auth_manager.py  gw2_manager.py  state_manager.py  supabase_manager.py
app/screens/: __init__.py  api_key.py
app/utils/: __init__.py  enums.py
