[project]
name = "gw2-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.56.0",
    "streamlit-cookies-manager>=0.2.0",
    "supabase>=2.28.3",
]

[tool.setuptools]
packages = []

[tool.poetry]
package-mode = false
