[project]
name = "gw2-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit-shortcuts>=1.2.1",
    "streamlit[auth]==1.56.0",
    "supabase>=2.28.3",
]

[tool.setuptools]
packages = []

[tool.poetry]
package-mode = false
